--- a/news/2015/08/20/001.mdx
+++ b/news/2015/08/20/001.mdx
@@ -1,9 +1,10 @@
 ---
 slug: "foamtastic-fun-at-the-neon-acquaintance-party"
-title: "foamtastic fun at the #neon acquaintance party"
+title: "Foamtastic Fun at the #neon Acquaintance Party"
 description: "Year after year, the acquaintance party has been a fun way to cap off the..."
 author: "Goldenstate"
 date: "2015/08/20"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/neon-party-2015-04.jpg"
 ---
 
 Year after year, the acquaintance party has been a fun way to cap off the beginning of the goldenstate school year, and this year’s event was no different. on july 31, students, faculty, and honored guests converged upon the anchor driving range for food, music, and the enjoyment of each other’s company. however, this time around, things got a little bit messy the addition of tons and tons of foam!.
@@ -25,3 +26,8 @@ Dj nat kept the good vibes going into the night. (photo by joaquin suaverdez).
 Students showed off their moves during the dance competition. (photo courtesy of john patrick gutierrez).
 
 Tons and tons of foam rain down on the acquaintance party crowd. (photo courtesy of john patrick gutierrez).
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/neon-party-2015-01.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/neon-party-2015-03.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/neon-party-2015-02.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/neon-party-2015-05.jpg)
