--- a/news/2020/03/04/001.mdx
+++ b/news/2020/03/04/001.mdx
@@ -1,9 +1,10 @@
 ---
 slug: "larong-pinoy-traditional-games-from-yesterday-played-by-the-youth-of-today"
-title: "larong pinoy: traditional games from yesterday played by the youth of today"
+title: "Larong Pinoy: Traditional Games from Yesterday Played by the Youth of Today"
 description: "I am one example of a filipino whose formative years were not all about psp..."
 author: "Goldenstate"
 date: "2020/03/04"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/buwan-wika-05.jpg"
 ---
 
 I am one example of a filipino whose formative years were not all about psp and game apps on tablets; i grew up with games played outside of the confines of our house. i grew up with games with lots of interaction with friends, family, and neighbors.
@@ -21,3 +22,5 @@ Not only did we get in a good sweat, but we also nourished our hearts and souls.
 Yes, we will have another chance to enjoy larong pinoy next august, but even before then, i hope we can play these games more often.
 
 One student trying to climb a greasy bamboo pole (palo sebo) to get to the price money .
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/buwan-wika-04.jpg)
