--- a/news/2020/03/09/001.mdx
+++ b/news/2020/03/09/001.mdx
@@ -1,11 +1,17 @@
 ---
 slug: "preparing-and-conceptualizing-for-goldenstate-colleges-annual-hrm-skills-olympics-2020"
-title: "preparing and conceptualizing for goldenstate college’s annual hrm skills olympics 2020"
+title: "Preparing and Conceptualizing for Goldenstate College’s Annual Hrm Skills Olympics 2020"
 description: "All of the sleepless nights spent by our students in preparing and conceptualizing for goldenstate..."
 author: "Goldenstate"
 date: "2020/03/09"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/85237511_1546398528841021_8136031156689698816_n.jpg"
 ---
 
 All of the sleepless nights spent by our students in preparing and conceptualizing for goldenstate college’s annual hrm skills olympics 2020 will be witnessed beginning today, this will be the another year of talents, creativity and collaborative skills of our expert teachers and passionate students. these hrm students will prove to you why our college is home to the best hospitality industry in the entire region... come witness as their creative juices flow unrestricted in doing grand flower arrangements, elegant table designs to cooking fancy palatable dishes.
 
 #hrmskills2020 #homeofthechampions #goldenstatecollege.
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/85237511_1546398528841021_8136031156689698816_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/85258392_1546398568841017_3422719026558664704_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/88307172_1546398598841014_1512917270991470592_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/87420496_1546398638841010_8151174120453701632_n.jpg)
