--- a/news/2020/03/09/002.mdx
+++ b/news/2020/03/09/002.mdx
@@ -1,9 +1,10 @@
 ---
 slug: "the-henerals-today-are-celebrating-their-81st-founding-anniversary-and-the-31st-kalilangan-fiesta"
-title: "the henerals today are celebrating their 81st founding anniversary and the 31st kalilangan fiesta"
+title: "The Henerals Today Are Celebrating Their 81st Founding Anniversary and the 31st Kalilangan Fiesta"
 description: "The henerals today are celebrating their 81st founding anniversary and the 31st kalilangan fiesta. its..."
 author: "Goldenstate"
 date: "2020/03/09"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/87775477_1546432978837576_3643730828065767424_n.jpg"
 ---
 
 The henerals today are celebrating their 81st founding anniversary and the 31st kalilangan fiesta. its name derived from maguindanaon word “kalilang” which means celebration and commemoration, select students of goldenstate college will showcase the vast wealth of culture general santos has as it celebrates (kalilang) through this year’s theme “bringing the cultures together. kampeon sa kultura at saya!”.
