--- a/news/2020/03/09/004.mdx
+++ b/news/2020/03/09/004.mdx
@@ -1,11 +1,22 @@
 ---
 slug: "hrm-skills-olympics-day-2"
-title: "hrm skills olympics day 2"
+title: "Hrm Skills Olympics Day 2"
 description: "Delectable and alluring! breads are known to be best with coffee...but who would have thought..."
 author: "Goldenstate"
 date: "2020/03/09"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/88099704_1547412895406251_649049595141160960_n.jpg"
 ---
 
 Delectable and alluring! breads are known to be best with coffee...but who would have thought that these clever restaurateurs could turn a simple bread into a peculiar, delish and grandest display? watch out for more flabbergasting and artistic masterpiece of goldenstate’s finest and skillful hm students only here at kcc convention and events center!.
 
 #hrmskillsolympics #day2.
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/88099704_1547412895406251_649049595141160960_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/88291765_1547412935406247_4561239316843462656_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/88113742_1547412968739577_4790178403913302016_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/87768650_1547413002072907_9035111598657634304_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/87827190_1547413058739568_7627686365202743296_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/88098001_1547413088739565_4570588245171109888_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/87730881_1547413168739557_5349691326935859200_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/87572632_1547413235406217_6147673478616055808_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/88056052_1547413212072886_3940013297234870272_n.jpg)
