--- a/news/2020/03/09/006.mdx
+++ b/news/2020/03/09/006.mdx
@@ -1,9 +1,10 @@
 ---
 slug: "international-immersion-program"
-title: "international immersion program"
+title: "International Immersion Program"
 description: "International immersion program: preparing our future educators for better employment opportunities."
 author: "Goldenstate"
 date: "2020/03/09"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/88175323_1548606335286907_6048039703456776192_n.jpg"
 ---
 
 International immersion program: preparing our future educators for better employment opportunities.
