--- a/news/2020/03/09/007.mdx
+++ b/news/2020/03/09/007.mdx
@@ -1,9 +1,10 @@
 ---
 slug: "goldestate-colleges-jobs-fair-2020"
-title: "goldestate college’s jobs fair 2020."
+title: "Goldestate College’s Jobs Fair 2020."
 description: "Every year goldenstate college in cooperation with department of labor and employment, local goverment office..."
 author: "Goldenstate"
 date: "2020/03/09"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/87328526_1553277661486441_9223237466939457536_n.jpg"
 ---
 
 Every year goldenstate college in cooperation with department of labor and employment, local goverment office of general santos city, public employment service office, philippine overseas employment administration, brigada group of companies, jolibee foods corporation, kcc malls and united states homeland security investagations us embassy manila will once again conduct its annual jobs fair and symposium. this goldenstate sponsored annual event is one of the institution’s commitment to provide our goldenstate graduating students, non goldenstate students and those currently seeking for job opportunity to have one on one meeting, conduct interview/be interviewed by prospective employers and be hired.
