--- a/news/2020/03/09/008.mdx
+++ b/news/2020/03/09/008.mdx
@@ -1,9 +1,10 @@
 ---
 slug: "mr-pedro-delgado-assistant-hsi-attache-of-the-us-embassy-to-the-philippines-spoke-about-what-is-human-trafficking"
-title: "mr pedro delgado assistant hsi attache of the us embassy to the philippines spoke about what is human trafficking"
+title: "Mr Pedro Delgado Assistant Hsi Attache of the Us Embassy to the Philippines Spoke about What Is Human Trafficking"
 description: "Anyone can fall prey to human trafficking, and this is regardless of sex, age, race,..."
 author: "Goldenstate"
 date: "2020/03/09"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/88416930_1553495548131319_7540443029526544384_n.jpg"
 ---
 
 Anyone can fall prey to human trafficking, and this is regardless of sex, age, race, or nationality. the best way to avoid falling into the trap of these traffickers is to always be vigilant, to see what’ around and be suspicious.
