--- a/news/2020/09/22/001.mdx
+++ b/news/2020/09/22/001.mdx
@@ -1,7 +1,10 @@
 ---
 slug: "goldenstate-college-infocast"
-title: "goldenstate college infocast"
+title: "Goldenstate College Infocast"
 description: ""
 author: "Goldenstate"
 date: "2020/09/22"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2020/09/goldenstate-info-cast-01.jpg"
 ---
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2020/09/goldenstate-info-cast-02.jpg)
