--- a/news/2021/07/30/001.mdx
+++ b/news/2021/07/30/001.mdx
@@ -1,9 +1,10 @@
 ---
 slug: "updated-directory-for-first-semester-sy-2021-2022"
-title: "updated directory for first semester sy: 2021-2022"
+title: "Updated Directory for First Semester Sy: 2021-2022"
 description: "Heads up goldenians! updated directory for first semester sy: 2021-2022."
 author: "Goldenstate"
 date: "2021/07/30"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2021/07/192098687_1943348409146029_3996401250253729139_n.jpg"
 ---
 
 Heads up goldenians! updated directory for first semester sy: 2021-2022.
@@ -11,3 +12,5 @@ Heads up goldenians! updated directory for first semester sy: 2021-2022.
 For concerns and inquiries, please call or text the mobile numbers of the different offices.
 
 For more updates, please keep posted thru our fb pages goldenstate college e-newsletter goldenstate online enrolment.
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2021/07/192098687_1943348409146029_3996401250253729139_n.jpg)
