--- a/news/2021/07/30/005.mdx
+++ b/news/2021/07/30/005.mdx
@@ -1,9 +1,12 @@
 ---
 slug: "goldenstate-college-online-registration-form"
-title: "goldenstate college online registration form"
+title: "Goldenstate College Online Registration Form"
 description: "Heads up goldenians! online registration linkplease register thru our goldenstate college registration form for the..."
 author: "Goldenstate"
 date: "2021/07/30"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2021/07/goldenstate-online-registration-2021-2022.jpg"
 ---
 
 Heads up goldenians! online registration linkplease register thru our goldenstate college registration form for the first semester sy: 2021-2022.note: subject loads are available from your program heads and deans. also please plot your subjects in the registrar’s office once you are allowed to come to school.for more updates, please keep posted thru our fb pages goldenstate college e-newsletter goldenstate online enrolmenthttps://forms.gle/paccby9vbjkmty4u8.
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2021/07/goldenstate-online-registration-2021-2022.jpg)
