--- a/news/2022/11/23/001.mdx
+++ b/news/2022/11/23/001.mdx
@@ -1,7 +1,57 @@
 ---
 slug: "hm-skills-15th-tuna-college"
-title: "hm skills 15th tuna college"
+title: "Hm Skills 15th Tuna College"
 description: ""
 author: "Goldenstate"
 date: "2022/11/23"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/305577064_2293353790812154_2548654055120098055_n.jpg"
 ---
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/299894157_2293357024145164_1343232538016523837_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/301173499_2293352714145595_3599783809145998272_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/301402138_2293359694144897_1019135085857368940_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/301417033_2293352630812270_2143598070368393424_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/301429925_2293355710811962_3104848320715164900_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/301734213_2293353664145500_6471907018751575036_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/301756142_2293354114145455_814931387869402286_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/301969830_2293353864145480_4406625930396993250_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/302061290_2293357617478438_3000743549759625246_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/302085065_2293357800811753_761051490466099025_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/302093709_2293355304145336_4316763219985779715_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/302141312_2293357700811763_5897111164348559591_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/302143458_2293354080812125_8938260995300754815_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/302248147_2293353140812219_8291185304135194808_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/302280986_2293355467478653_6307319696732333979_n-1.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/302280986_2293355467478653_6307319696732333979_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/302428158_2293357084145158_2476593528239866187_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/302429764_2293359844144882_6097113937284357548_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/302441979_2293353327478867_361773421254929809_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/302530148_2293358877478312_3924293682093774625_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/302569898_2293359237478276_6584622502053444816_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/302606493_2293357980811735_6176960296375253065_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/303038068_2293352857478914_3894939797788134572_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/303046051_2293354350812098_6152359590833477152_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/303166967_2293358587478341_560666606375826740_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/304116544_2293357534145113_9117131716122730332_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/304711062_2293359204144946_8720989172317704551_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/304764540_2293357340811799_8611975777532545456_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/304790079_2293351734145693_3278084940105638387_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/304846686_2293357167478483_1208530666953383081_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/304984750_2293352110812322_3542205746460082578_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/304985960_2293351637479036_1640949807086055192_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/305039505_2293354140812119_7350926835298057733_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/305166459_2293355897478610_8593874712668838146_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/305197216_2293356257478574_9072148902201961364_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/305197966_2293357877478412_2103972532960417089_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/305298601_2293355847478615_3737592220706468312_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/305308610_2293353570812176_9071884345322752597_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/305312700_2293356174145249_5217242833864842823_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/305318518_2293351664145700_5794458502536770786_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/305353786_2293354637478736_7524839179067835495_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/305401411_2293357437478456_8433537109297268244_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/305407467_2293353704145496_1069976899265615182_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/305417439_2293358494145017_6426814181350116371_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/305577064_2293353790812154_2548654055120098055_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/305658094_2293358660811667_2397704340616138654_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/305660339_2293358074145059_3450598181310778501_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/305933249_2293354807478719_1724064456554793015_n.jpg)
