--- a/news/2022/11/23/002.mdx
+++ b/news/2022/11/23/002.mdx
@@ -1,9 +1,10 @@
 ---
 slug: "pnp-heart"
-title: "pnp h.e.a.r.t."
+title: "Pnp H.e.a.r.t."
 description: "Our very own head for development office dr. john ralph manilay, joined the regional office..."
 author: "Goldenstate"
 date: "2022/11/23"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/313031622_490234033148426_3696834624148639311_n.jpg"
 ---
 
 Our very own head for development office dr. john ralph manilay, joined the regional office 12 during the launching of h.e.a.r.t or health and emergency assistance for rehabilation training last monday, oct 24, 2022.
@@ -11,3 +12,13 @@ Our very own head for development office dr. john ralph manilay, joined the regi
 Dr manilay, on his speech lauds the pnp about this initiative and gave emphasis on the importance of this partnership. he said he was really grateful that the instution, goldenstate college was given an opportunity to be part of this program. dr manilay was also the guest of honor and speaker during this momentous event.
 
 Also present at the ceremony are pbgen jimili l. macaraeg, director of pro12, orda pro 12 head, pbgen rolando destura, city director, pcol jomar alexis yap and the members of pro12 police force.
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/307464292_490234139815082_5858819153032400218_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/312488082_490234356481727_5558689511598135378_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/312616107_490234303148399_1805530945194007585_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/312730027_490234099815086_3309962657252146340_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/312936580_490234246481738_2602258594036654647_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/312981224_490234929815003_5814646635570151901_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/313003814_490235093148320_3732168876313374328_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/313031622_490234033148426_3696834624148639311_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/313069692_490234813148348_8569906036343888192_n.jpg)
