--- a/news/2022/11/23/003.mdx
+++ b/news/2022/11/23/003.mdx
@@ -1,7 +1,33 @@
 ---
 slug: "intrams-parade-2022"
-title: "intrams parade 2022"
+title: "Intrams Parade 2022"
 description: ""
 author: "Goldenstate"
 date: "2022/11/23"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/315548785_507694238069072_6868293843202177112_n.jpg"
 ---
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/315120923_507683658070130_5518163146093086949_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/315177257_507684471403382_5834539247635252525_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/315418048_507685294736633_5717783018604922019_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/315439621_507692791402550_3324854788290351899_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/315540548_507689251402904_2864126699518404483_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/315548785_507694238069072_6868293843202177112_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/315638001_507685968069899_3119507134291959970_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/315647714_507685238069972_4711785165696407066_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/315748233_507690898069406_8571103482033790539_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/315753206_507699478068548_7223771353170017242_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/315760097_507701204735042_5434222966595803553_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/315860024_507684171403412_8832057816459766368_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/315868976_507686031403226_2983637329952938340_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/315888224_507683904736772_4968776117734720789_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/315908650_506428258195670_1313711802233649768_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/315954310_507705508067945_4680550945060632650_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/315959738_507704704734692_8164582981658743467_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/315967135_507687908069705_3417573598818318279_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/315985756_507686568069839_7017771326038390928_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/316010951_507700971401732_1864756590154537393_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/316110728_507692181402611_234515221499818240_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/316128353_507703531401476_5930599130054558891_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/316131022_507686251403204_1065943885417142782_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/316205301_507688608069635_6794657126399269101_n.jpg)
