--- a/news/2022/11/23/004.mdx
+++ b/news/2022/11/23/004.mdx
@@ -1,7 +1,26 @@
 ---
 slug: "mr-ms-goldenstate-college-2022"
-title: "mr & ms goldenstate college 2022"
+title: "Mr & Ms Goldenstate College 2022"
 description: ""
 author: "Goldenstate"
 date: "2022/11/23"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/315407037_508921797946316_5519797619179037887_n.jpg"
 ---
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/315218498_508922124612950_1992182206418303055_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/315303437_508921391279690_1871470521518409789_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/315407037_508921797946316_5519797619179037887_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/315424121_508922307946265_1454860845129825321_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/315482521_508921241279705_999969473605817295_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/315562498_508921704612992_5871456535709633481_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/315591460_508921554613007_1892158992282714391_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/315701492_508920371279792_1047354895356457599_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/315756327_508922334612929_4884601162022224213_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/315897638_508922487946247_344375030678012769_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/315971093_508921344613028_6016338542965429556_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/315976390_508916201280209_27021540216596811_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/315985166_508923257946170_3664522283580082895_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/316047935_508922017946294_8961397748090629124_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/316104953_508923381279491_2536057951072941115_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/316139625_508915577946938_5355209837513794965_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/316166417_508922047946291_1868540811969122963_n.jpg)
