--- a/news/2022/11/23/005.mdx
+++ b/news/2022/11/23/005.mdx
@@ -1,7 +1,54 @@
 ---
 slug: "graduation-2020-2021"
-title: "graduation 2020-2021"
+title: "Graduation 2020-2021"
 description: ""
 author: "Goldenstate"
 date: "2022/11/23"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/286114814_2222648997882634_4831635614190840491_n.jpg"
 ---
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/285340185_2222694147878119_543763582806876465_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/285513575_2222689651211902_799483509372021968_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/285547438_2222694351211432_1838242751146757703_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/285562206_2222651127882421_5984725605218200003_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/285563147_2222648541216013_1816080131133541234_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/285626814_2222694051211462_3792821639896313290_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/285627803_2222693794544821_5427155735516246789_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/285630167_2222692894544911_4533890511243346017_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/285648499_2222647031216164_112226851096984350_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/285653275_2222691234545077_8143240284352498133_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/285654909_2222648821215985_4136835444982211482_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/285660295_2222649827882551_4613928653153028119_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/285661501_2222690601211807_6113304535537175258_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/285695479_2222648931215974_4650896175484735283_n-scaled.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/285701710_2222694107878123_6684194382289200510_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/285701846_2222651194549081_5262512108863397171_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/285703681_2222648654549335_2943821660676766238_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/285703681_2222648957882638_4895289343121905849_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/285713912_2222693057878228_7289911684402704204_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/285767166_2222650181215849_6788686829831901479_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/285776843_2222692944544906_4905117016179443611_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/285818445_2222690061211861_6558013959623026172_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/285827762_2222691351211732_5873580274492681553_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/285829197_2222646337882900_5977628773404800695_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/285843193_2222649107882623_1210045567546929120_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/285857216_2222648161216051_5113747243529312975_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/285934350_2222647874549413_4740525386860346132_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/285939589_2222649251215942_1563058037839551738_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/285987780_2222729014541299_2305812889374322148_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/286000846_2222694244544776_4313832312874424365_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/286072514_2222689701211897_2308228210598881911_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/286114814_2222648997882634_4831635614190840491_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/286175142_2222691191211748_736134497464749004_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/286187599_2222650327882501_4498280350532261182_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/286197478_2222645764549624_9138275340873877714_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/286292259_2222689527878581_9103410815995107644_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/286402373_2222692167878317_3657158313364790279_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/286434556_2222647741216093_7199709265446365534_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/286446786_2222648201216047_8798882180240573047_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/286509684_2222694074544793_7402990457739223007_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/286568598_2222650377882496_1078779960635434159_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/286571769_2222649964549204_1312046354521550827_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/286717803_2222694664544734_7715865743780921921_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/286840063_2222689747878559_1312899875575174720_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/285695479_2222648931215974_4650896175484735283_n.jpg)
