--- a/news/2022/11/23/006.mdx
+++ b/news/2022/11/23/006.mdx
@@ -1,9 +1,13 @@
 ---
 slug: "alabel-christmas-for-a-cause"
-title: "alabel christmas for a cause"
+title: "Alabel Christmas for a Cause"
 description: "Dr. warren a. manilay, mayor vic salarda with the alabel municipal counselors during the distribution..."
 author: "Goldenstate"
 date: "2022/11/23"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/315770955_510927527745743_5967766955381530157_n.jpg"
 ---
 
 Dr. warren a. manilay, mayor vic salarda with the alabel municipal counselors during the distribution of 300 sacks of rice for lgu alabel conducted at alabel gym, alabel, sarangani province on november 16, 2022.this is in continuation of the 16th annual christmas for a cause program of the goldenstate college. mabuhay ang goldenstate college! thanks to the generosity of the administration.thank you madam sara.
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/315770955_510927527745743_5967766955381530157_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/316133063_510927474412415_2238249689286777239_n.jpg)
