--- a/news/2022/11/23/008.mdx
+++ b/news/2022/11/23/008.mdx
@@ -1,11 +1,16 @@
 ---
 slug: "sarangani-christmas-for-a-cause"
-title: "sarangani christmas for a cause"
+title: "Sarangani Christmas for a Cause"
 description: "Namahagi ng bigas ang golden state college sa mga nasalanta ng bagyong ‘paeng’ sa mga..."
 author: "Goldenstate"
 date: "2022/11/23"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/315100611_499530372197278_4343929319824470389_n.jpg"
 ---
 
 Namahagi ng bigas ang golden state college sa mga nasalanta ng bagyong ‘paeng’ sa mga bayan ng sarangani province.kasama ni dr. warren manilay, mnsa phd, ang president at ceo ng golden state college, sina sarangani vice-gov. elmer de peralta at mga board member sa isinagawang turnover ceremony ng 600 sako ng bigas na ibinigay ng golden state college sa provincial government ng sarangani na idinaos sa provincial capitol noong november 15 , habang 300 na sako ng bigas naman ang tinanggap ng municipal government ng alabel at 200 sacks naman sa local government ng maasim. mindanao media services.
 
 From “sapol news bulletin – general santos city ”.
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/315016232_499531465530502_6761196710752195168_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/315100611_499530372197278_4343929319824470389_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/315868598_499531348863847_6851149728778385488_n.jpg)
