--- a/news/2023/08/19/002.mdx
+++ b/news/2023/08/19/002.mdx
@@ -1,11 +1,18 @@
 ---
 slug: "goldenstate-college-gen-santos-sponsors-kapehan-sa-kalilangan-2023"
-title: "goldenstate college – gen. santos sponsors kapehan sa kalilangan 2023"
+title: "Goldenstate College – Gen. Santos Sponsors Kapehan Sa Kalilangan 2023"
 description: "Being one of the sponsors in the kapehan sa kalilangan 2023, goldenstate college offers breads,..."
 author: "Jwill"
 date: "2023/08/19"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2023/08/333691352_5848879401833394_9016583239677274545_n-1.jpg"
 ---
 
 Being one of the sponsors in the kapehan sa kalilangan 2023, goldenstate college offers breads, kakanins and coffee to the participants of the parada ng lahi.
 
 The administration and the college of hospitality management (chm) faculty and students spearheaded the preparations of the kapehan.
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/08/333691352_5848879401833394_9016583239677274545_n-1.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/08/333812054_1813550152365125_1529196926274156800_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/08/333315374_619426030019121_6597535002422189341_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/08/331123530_767874744896274_444962225889983893_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/08/333937719_871929497249608_6769538663410134491_n.jpg)
