--- a/news/2023/08/19/005.mdx
+++ b/news/2023/08/19/005.mdx
@@ -1,9 +1,10 @@
 ---
 slug: "goldenstate-college-of-gensan-senior-high-school-department-enrollment-is-now-open"
-title: "goldenstate college of gensan senior high school department enrollment is now open"
+title: "Goldenstate College of Gensan Senior High School Department Enrollment Is Now Open"
 description: "Look goldenstate college of gensan senior high school department enrollment is now open, for school..."
 author: "Jwill"
 date: "2023/08/19"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2023/08/356150838_659918872846607_2168878676612362167_n.jpg"
 ---
 
 Look goldenstate college of gensan senior high school department enrollment is now open, for school year 2023-2024.
@@ -11,3 +12,8 @@ Look goldenstate college of gensan senior high school department enrollment is n
 Requirements : attach on the posted photo !.
 
 Free tuition enroll now be one of us.
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/08/356150838_659918872846607_2168878676612362167_n.jpg)
+![](https://static.xx.fbcdn.net/images/emoji.php/v9/t77/1/16/203c.png)
+![](https://static.xx.fbcdn.net/images/emoji.php/v9/t50/1/16/2757.png)
+![](https://static.xx.fbcdn.net/images/emoji.php/v9/t15/1/16/1f49b.png)
