--- a/news/2023/08/19/006.mdx
+++ b/news/2023/08/19/006.mdx
@@ -1,9 +1,16 @@
 ---
 slug: "goldenstate-college-in-service-training-for-teachers-2023"
-title: "goldenstate college in-service training for teachers 2023"
+title: "Goldenstate College in-Service Training for Teachers 2023"
 description: "A 3-day in-service training for teachers 2023 at mt. sabrina panoramic view and resort on..."
 author: "Jwill"
 date: "2023/08/19"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2023/08/357749767_664482089056952_3827108431265668135_n.jpg"
 ---
 
 A 3-day in-service training for teachers 2023 at mt. sabrina panoramic view and resort on july 6-8, 2023 participated by newly-hired teachers and school staff for goldenstate college – general santos, maasim, kiamba, malungon campus and holy infant school of malungon (an affiliate school of goldenstate college).
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/08/357749767_664482089056952_3827108431265668135_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/08/358107607_664482139056947_4256718433321172914_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/08/357714670_664482189056942_6118879431232746245_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/08/357491365_664482249056936_3837978258918393030_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/08/357436084_664482042390290_378919897745555273_n.jpg)
