--- a/news/2023/08/19/007.mdx
+++ b/news/2023/08/19/007.mdx
@@ -1,9 +1,14 @@
 ---
 slug: "enrollment-for-school-year-2023-2024-is-now-going-on"
-title: "enrollment for school year 2023-2024 is now going-on"
+title: "Enrollment for School Year 2023-2024 Is Now Going-On"
 description: "Enrollment for school year 2023-2024 is now going-on. classes will start on august 23, 2023."
 author: "Jwill"
 date: "2023/08/19"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2023/08/359820271_668016662036828_1543791770020511087_n.jpg"
 ---
 
 Enrollment for school year 2023-2024 is now going-on. classes will start on august 23, 2023.
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/08/359820271_668016662036828_1543791770020511087_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/08/356150838_659918872846607_2168878676612362167_n-1.jpg)
+![](https://static.xx.fbcdn.net/images/emoji.php/v9/tba/1/16/1f4e3.png)
