--- a/news/2023/10/16/001.mdx
+++ b/news/2023/10/16/001.mdx
@@ -1,9 +1,10 @@
 ---
 slug: "elementary-and-high-school-competition-tuna-skills-olympics-2023"
-title: "elementary and high school competition – tuna skills olympics 2023"
+title: "Elementary and High School Competition – Tuna Skills Olympics 2023"
 description: "The goldenstate college in cooperation with the local government unit of general santos city and..."
 author: "Goldenstate"
 date: "2023/10/16"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2023/10/386647036_722487919923035_7563215693900215860_n.jpg"
 ---
 
 The goldenstate college in cooperation with the local government unit of general santos city and tuna festival council staged again the 16th tuna festival skills olympics 2023 held on september 1, 2023 at the veranza mall, general santos city.
@@ -11,3 +12,16 @@ The goldenstate college in cooperation with the local government unit of general
 There are different competitions that were competed in the 1st day for elementary and secondary categories such as cake decorating, flower arrangement, table skirting, fruit and vegetable carving, napkin folding competition, tuna pasta salad, waiters relay and the most awaited bartending competition.
 
 The new era university – general santos city emerged as over-all champion in the elementary category while malandag national high school was declared over-all champion in the high school category.
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/10/370285770_722492226589271_8602622029200860169_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/10/387195599_722487893256371_7985342361200881925_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/10/386734503_722492996589194_6140168342334644720_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/10/386730036_722487853256375_1366892282774966306_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/10/386647036_722487919923035_7563215693900215860_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/10/386519283_722491516589342_6699469742828619029_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/10/385502609_722487729923054_1125007871558056515_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/10/386759368_722487043256456_7412023391339568467_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/10/386790960_722488933256267_8588722900113776623_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/10/386543510_722488473256313_9072148345727544792_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/10/387138225_722489576589536_2881787130937874817_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/10/386477758_722488889922938_5424058601058339027_n.jpg)
