--- a/news/2023/10/16/002.mdx
+++ b/news/2023/10/16/002.mdx
@@ -1,9 +1,10 @@
 ---
 slug: "college-category-september-2-2023-tuna-skills-olympics-2023"
-title: "college category – september 2, 2023 (tuna skills olympics 2023)"
+title: "College Category – September 2, 2023 (Tuna Skills Olympics 2023)"
 description: "The college category of the 16th tuna festival skills olympics 2023 was held on september..."
 author: "Goldenstate"
 date: "2023/10/16"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2023/10/387063762_722940713211089_3134040538064115498_n.jpg"
 ---
 
 The college category of the 16th tuna festival skills olympics 2023 was held on september 2, 2023 at the veranza mall, general santos city. the event was supported and funded by the local government unit of general santos city, the tuna festival council and goldenstate college as the host institution.
@@ -11,3 +12,20 @@ The college category of the 16th tuna festival skills olympics 2023 was held on 
 There were cash prizes awarded to the winners of the different culinary and hospitality management events namely: table setting, tuna pasta, table skirting, table napkin folding, cake decorating, bartending, waiter’s relay, market basket, fruit & vegetable carving and flower arrangement.
 
 The participanting colleges came from north cotabato, south cotabato, general santos city and sarangani province. the university of southern mindanao – kidapawan city campus emerged victorious as over-all champion while the university of southern mindanao – kabacan campus was declared over-all first runner-up and south east asian institute of technology- tupi, south cotabato was the over-all second runner-up.
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/10/387056147_722945613210599_8645690152873427374_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/10/386725049_722949366543557_3314637299817878303_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/10/386742027_722949836543510_4496205630191477577_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/10/387167409_722948563210304_8355653020266221255_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/10/386752138_722947283210432_8280140190361360564_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/10/386684936_722946476543846_2598469846647300137_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/10/386751911_722946099877217_7598379797107122197_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/10/387816629_722944396544054_382533463493331117_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/10/387042500_722944186544075_5548403488375121635_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/10/387805328_722942889877538_9153730602904016501_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/10/387094711_722941569877670_3088154156571026244_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/10/387068266_722942033210957_5103104113476783000_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/10/387811434_722941189877708_3532314551438836736_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/10/387187806_722941079877719_5993340196466762807_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/10/387063762_722940713211089_3134040538064115498_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/10/387170441_722939963211164_2493777705348165230_n.jpg)
