--- a/news/2023/11/29/001.mdx
+++ b/news/2023/11/29/001.mdx
@@ -1,9 +1,17 @@
 ---
 slug: "dr-manilay-and-tesda-secretary-dg-mangudadatu-propel-skills-development-initiatives"
-title: "dr. manilay and tesda secretary dg mangudadatu propel skills development initiatives"
+title: "Dr. Manilay and Tesda Secretary Dg Mangudadatu Propel Skills Development Initiatives"
 description: "In a significant meeting held at the tesda main office, manila, on november 28, 2023,..."
 author: "Goldenstate"
 date: "2023/11/29"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2023/11/ecretary-DG-Surarto-Mangudadatu-of-TESDA.jpg"
 ---
 
 In a significant meeting held at the tesda main office, manila, on november 28, 2023, dr. sara jane t. manilay and tesda secretary dg surarto mangudadatu convened to explore groundbreaking opportunities for skills development and workforce empowerment. the collaborative efforts discussed in this pivotal encounter aim to shape the future of professional growth, fostering a more resilient and skilled workforce.
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/11/405246758_751397167032110_2726333291877772957_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/11/405297034_751397240365436_6103075837133167602_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/11/406445038_751397220365438_3091651546551113624_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/11/405375731_751397010365459_3546076905967156146_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/11/405311551_751397183698775_7266941215689566260_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/11/405263652_751397123698781_13920430395692561_n.jpg)
