--- a/news/2024/01/23/001.mdx
+++ b/news/2024/01/23/001.mdx
@@ -1,9 +1,23 @@
 ---
 slug: "goldenstate-college-concludes-christmas-for-a-cause-program-2023"
-title: "goldenstate college concludes christmas for a cause program 2023"
+title: "Goldenstate College Concludes Christmas for a Cause Program 2023"
 description: "On the day before christmas, the goldenstate college conducted its last leg of christmas for..."
 author: "Goldenstate"
 date: "2024/01/23"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2024/01/419888917_277579018388573_5217402192812862495_n.jpg"
 ---
 
 On the day before christmas, the goldenstate college conducted its last leg of christmas for a cause program on december 24, 2023 at goldenstate college beach and recreation center, barangay tinoto, maasim, sarangani province with the president and ceo, dr. warren a. manilay and vp for finance, dr. sara jane t. manilay.
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/01/410491653_747363387338671_8526719824156929907_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/01/419703936_7579289988771615_8627040644090252461_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/01/419711862_748040767302437_5685722964803875264_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/01/419713226_879077793897214_8602348279125632887_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/01/419888917_277579018388573_5217402192812862495_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/01/419888918_1603629647038204_2590723716676258564_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/01/419893569_2402003016657898_6893118695332909744_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/01/419901582_410248861439027_8638133744718302854_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/01/419912396_341226078783347_1050977158210769692_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/01/420040902_3180855375555455_1620302779096891603_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/01/420042452_1109108430246050_2731889489428773963_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/01/420098781_390532453339882_4884718230196315865_n.jpg)
