--- a/news/2024/01/23/003.mdx
+++ b/news/2024/01/23/003.mdx
@@ -1,9 +1,19 @@
 ---
 slug: "christmas-for-a-cause-program-of-goldenstate-college-general-santos-city-on-december-21-2023-at-old-dumpsite-barangay-tambler-gsc"
-title: "christmas for a cause program of goldenstate college general santos city on december 21, 2023 at old dumpsite, barangay tambler, gsc"
+title: "Christmas for a Cause Program of Goldenstate College General Santos City on December 21, 2023 at Old Dumpsite, Barangay Tambler, Gsc"
 description: "Christmas for a cause program of goldenstate college general santos city on december 21, 2023..."
 author: "Goldenstate"
 date: "2024/01/23"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2024/01/419966591_911980030501592_6635300761789559952_n.jpg"
 ---
 
 Christmas for a cause program of goldenstate college general santos city on december 21, 2023 at old dumpsite, barangay tambler, general santos city headed by goldenstate college administration, dr. warren a. manilay and dr. sara jane t. manilay in participation with philippine national police, traffic enforcement unit and bureau of fire and protection.
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/01/417276100_808110667749257_7333205255068534580_n-1.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/01/419574055_363311026320867_3585738175296575696_n-1.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/01/419587205_903313914778937_5408676500756709024_n-1.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/01/419729779_258909013750480_1659885877358702094_n-1.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/01/419825001_649212790562554_5632468960824529866_n-1.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/01/419891370_3055612364574554_2749962711918708980_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/01/419954989_896065158895742_1041288453877266733_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/01/419966591_911980030501592_6635300761789559952_n.jpg)
