--- a/news/2024/01/31/001.mdx
+++ b/news/2024/01/31/001.mdx
@@ -1,9 +1,10 @@
 ---
 slug: "quipper-sparks-joy-a-memorable-visit-enriches-schools-pet-day-celebration"
-title: "quipper sparks joy: a memorable visit enriches school’s pet day celebration"
+title: "Quipper Sparks Joy: A Memorable Visit Enriches School’s Pet Day Celebration"
 description: "Ms. maia higashi, from japan and the head of business operations and strategy of quipper..."
 author: "Goldenstate"
 date: "2024/01/31"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2024/01/422263632_1780078122511758_4318559326368276470_n.jpg"
 ---
 
 Ms. maia higashi, from japan and the head of business operations and strategy of quipper philippines, and his team brought joy to the school community during the pet day celebration. engaging with enthusiasm, she interacted with the children, fostering a memorable experience.
@@ -11,3 +12,10 @@ Ms. maia higashi, from japan and the head of business operations and strategy of
 The event not only showcased the importance of pets but also highlighted quipper’s commitment to education and community engagement.
 
 Ms. higashi’s presence added an extra layer of delight to the celebration, creating cherished moments for both the students and the school.
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/01/422319764_1108254520181156_6307316323421051273_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/01/422265847_1345796016818159_6562246470753248788_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/01/422263632_1780078122511758_4318559326368276470_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/01/422288478_925386142511319_6519653269756027344_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/01/422246295_409151314912904_2581626227486966274_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/01/419475461_413472271110394_5637684100094751382_n.jpg)
