--- a/news/2024/08/08/001.mdx
+++ b/news/2024/08/08/001.mdx
@@ -1,9 +1,29 @@
 ---
 slug: "gift-of-sharing-annual-program-of-the-goldenstate-college-for-its-social-and-community-extension-program"
-title: "gift of sharing: annual program of the goldenstate college for its social and community extension program"
+title: "Gift of Sharing: Annual Program of the Goldenstate College for Its Social and Community Extension Program"
 description: "To give back to the community is the main objective of the program. this year..."
 author: "Goldenstate"
 date: "2024/08/08"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/1.jpg"
 ---
 
 To give back to the community is the main objective of the program. this year a gift shared to children`s became the highlight in form of school supplies, grocery goods, slippers, vitamins and food to share. the college would like to make our constituents feel the connection of the college to the community, re-confirm and re-establish relationship. a unique relationship to establish and a foundation for a better partnership to last forever.
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/17.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/16.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/15.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/14.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/13.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/12.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/11.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/10.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/9.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/8.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/7.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/6.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/5.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/4.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/3.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/2.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/1.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/04/job-008.jpg)
