--- a/news/2024/08/29/001.mdx
+++ b/news/2024/08/29/001.mdx
@@ -1,11 +1,25 @@
 ---
 slug: "jhs-students-bsp-gsp-planting-activity"
-title: "jhs students, bsp & gsp planting activity"
+title: "Jhs Students, Bsp & Gsp Planting Activity"
 description: "In the celebration of national heroes day, junior high school students, bsp and gsp actively..."
 author: "Goldenstate"
 date: "2024/08/29"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/456955660_1030179432226274_6132523563970472312_n.jpg"
 ---
 
 In the celebration of national heroes day, junior high school students, bsp and gsp actively participated in a planting initiative, demonstrating their commitment to environmental conservation conducted last august 23, 2024 at glc.
 
 The activity highlighted the importance of civic responsibility and the role of the younger generation in continuing the values and ideals upheld by the country’s heroes.
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/456780139_1030179408892943_7430958883608738496_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/456816076_1030179385559612_6215167903411416194_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/456908549_1030179328892951_7799997852900494413_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/456955660_1030179432226274_6132523563970472312_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/456989463_1030179368892947_4669032865719156313_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/457000776_1030179335559617_8048472295485472363_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/457005649_1030179355559615_4356676930832069993_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/457007258_1030179232226294_3835234298813332249_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/457018625_1030179285559622_6159331779434233321_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/457024478_1030179218892962_2565818788143117072_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/457048414_1030179422226275_7688507781922236541_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/457138749_1030179305559620_7989039721886443977_n.jpg)
