--- a/news/2024/08/29/002.mdx
+++ b/news/2024/08/29/002.mdx
@@ -1,9 +1,10 @@
 ---
 slug: "project-access-launched-at-goldenstate-college"
-title: "project a.c.c.e.s.s. launched at goldenstate college"
+title: "Project A.C.C.e.s.s. Launched at Goldenstate College"
 description: "The regional anti- cybercrime unit 12 (racu) conducted a seminar on project a.c.c.e.s.s. (awareness through..."
 author: "Goldenstate"
 date: "2024/08/29"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/456710669_122120318594378488_3665216481354960590_n.jpg"
 ---
 
 The regional anti- cybercrime unit 12 (racu) conducted a seminar on project a.c.c.e.s.s. (awareness through cybercrime education: towards a safer online world) for the students of goldenstate college of koronadal held at kcc mall of marbel events center last thursday, august 22, 2024.
@@ -11,3 +12,10 @@ The regional anti- cybercrime unit 12 (racu) conducted a seminar on project a.c.
 This seminar aimed to heighten awareness and educate students regarding cybercrime and cyber security.
 
 We extend our appreciation to regional anti-cybercrime unit 12 for their invaluable insights on cybercrime and other critical issues that empower our students to stay vigilant particularly in the complex and ever evolving world of social media. their guidance plays a significant role in fostering a safer online environment for our community.
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/456573977_122120319242378488_7424335742185432935_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/456668753_122120319632378488_5789342380479179527_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/456710669_122120318594378488_3665216481354960590_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/456719099_122120319602378488_5533692555519014213_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/456907212_122120319644378488_8596942756531073155_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/456939039_122120319656378488_2048469293216262091_n.jpg)
