--- a/news/2024/08/29/003.mdx
+++ b/news/2024/08/29/003.mdx
@@ -1,9 +1,10 @@
 ---
 slug: "goldenstate-college-of-koronadal-city-college-and-senior-highschool-students-general-orientation-for-the-ay-2024-2025"
-title: "goldenstate college of koronadal city – college and senior highschool students’ general orientation for the a.y. 2024-2025"
+title: "Goldenstate College of Koronadal City – College and Senior Highschool Students’ General Orientation for the A.y. 2024-2025"
 description: "Held this afternoon of august 16, 2024 at south cotabato gymnasium and cultural center."
 author: "Goldenstate"
 date: "2024/08/29"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/455641828_821948246713728_962078134938317916_n.jpg"
 ---
 
 Held this afternoon of august 16, 2024 at south cotabato gymnasium and cultural center.
@@ -11,3 +12,9 @@ Held this afternoon of august 16, 2024 at south cotabato gymnasium and cultural 
 Thank you, students for attending and attentively listening to all the matters discussed and presented during this afternoon’s general orientation.
 
 *photos owned by the college of business and management department*.
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/455294656_821948570047029_5144152031335052847_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/455641828_821948246713728_962078134938317916_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/455711804_821948476713705_8961302644570656895_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/455781274_821948593380360_3118713378486378143_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/08/455783141_821948496713703_433733601784251449_n.jpg)
