--- a/news/2024/10/18/001.mdx
+++ b/news/2024/10/18/001.mdx
@@ -1,9 +1,27 @@
 ---
 slug: "first-aid-basic-training"
-title: "first aid basic training"
+title: "First Aid Basic Training"
 description: "“together, we serve: bsp and gsp scouts training for first aid skills.”."
 author: "Goldenstate"
 date: "2024/10/18"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/461262246_1052124496698434_5115718243636670636_n.jpg"
 ---
 
 “together, we serve: bsp and gsp scouts training for first aid skills.”.
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/461262246_1052124496698434_5115718243636670636_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/461271836_1052124453365105_7926833512576362576_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/461271858_1052124250031792_8697045443527635438_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/461272092_1052124466698437_7983021142436087625_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/461304870_1052124463365104_8368523973913615132_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/461305474_1052124480031769_6696799116358304102_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/461323641_1052124440031773_5913771817670315639_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/461323830_1052124483365102_8385976105206039238_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/461327427_1052124380031779_713461856319232828_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/461328703_1052124253365125_4720341398160864847_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/461338703_1052124316698452_3157092851305411348_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/461423360_1052124476698436_3494731178216578362_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/461424612_1052124420031775_919880240540356185_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/461435292_1052124470031770_4722454924213146660_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/461440583_1052124670031750_2030277327533893109_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/461517122_1052124443365106_1670787304227040482_n.jpg)
