--- a/news/2024/10/18/002.mdx
+++ b/news/2024/10/18/002.mdx
@@ -1,9 +1,10 @@
 ---
 slug: "students-celebrate-teachers-day-with-heartfelt-appreciation"
-title: "students celebrate teachers’ day with heartfelt appreciation"
+title: "Students Celebrate Teachers’ Day with Heartfelt Appreciation"
 description: "On october 4, 2024, students gathered to honor their teachers in a meaningful teachers’ day..."
 author: "Goldenstate"
 date: "2024/10/18"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/462087739_1058232119421005_3136602395033593207_n.jpg"
 ---
 
 On october 4, 2024, students gathered to honor their teachers in a meaningful teachers’ day celebration at glc. each grade level prepared special messages, presented flowers, and offered tokens of appreciation to express their gratitude for the dedication and support of their educators.
@@ -11,3 +12,14 @@ On october 4, 2024, students gathered to honor their teachers in a meaningful te
 The program, organized by the ssg officers of the junior high school, showcased the deep respect and love students have for their second parents in the classroom, making the day a memorable tribute to the teaching community.
 
 To all teachers out their happy world teachers’ day!.
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/461980102_1058232062754344_2481986318578931986_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/462031613_1058232696087614_2705071143479478848_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/462087739_1058232119421005_3136602395033593207_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/462089788_1058232259420991_1055302575027369034_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/462105982_1058232196087664_5593982534871163674_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/462129159_1058232279420989_2244638799634804933_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/462134181_1058232229420994_8912904992320589022_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/462165896_1058232389420978_104743318009924390_n.jpg)
+![](https://static.xx.fbcdn.net/images/emoji.php/v9/t97/1/16/1fa75.png)
+![](https://static.xx.fbcdn.net/images/emoji.php/v9/t15/1/16/1f49b.png)
