--- a/news/2024/10/18/003.mdx
+++ b/news/2024/10/18/003.mdx
@@ -1,9 +1,27 @@
 ---
 slug: "8th-pin-investiture-white-coat-and-pinning-ceremony"
-title: "8th pin investiture, white coat and pinning ceremony"
+title: "8th Pin Investiture, White Coat and Pinning Ceremony"
 description: "Today marks a significant milestone as we don our white coats and pins, symbolizing our..."
 author: "Goldenstate"
 date: "2024/10/18"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/462358091_952092153629276_8792723110187475740_n.jpg"
 ---
 
 Today marks a significant milestone as we don our white coats and pins, symbolizing our commitment to excellence in pharmacy. excited to delve into this journey of knowledge and service!.
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/462455276_952092936962531_1035922711848197556_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/462460442_952093320295826_7927148742647523262_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/462463694_952093933629098_7121838911342554452_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/462319495_952091843629307_3854672575135514330_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/462319634_952093916962433_2311443195768192765_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/462330164_952091773629314_789020446302378173_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/462330337_952091983629293_1145117959354470496_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/462338089_952092380295920_6059149453700609610_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/462358091_952092153629276_8792723110187475740_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/462383893_952091986962626_567224900478891376_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/462417651_952093010295857_6306197253549339641_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/462418490_952092023629289_6021164237321337292_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/462433365_952093046962520_753417622562268428_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/462468744_952092090295949_3217289613897529296_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/462474513_952092576962567_5618607236488620911_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/462474837_952092620295896_3391818988197089967_n.jpg)
