--- a/news/2024/10/18/007.mdx
+++ b/news/2024/10/18/007.mdx
@@ -1,11 +1,22 @@
 ---
 slug: "bstm-departmental-seminar-and-workshop"
-title: "bstm departmental seminar and workshop"
+title: "Bstm Departmental Seminar and Workshop"
 description: "Photos taken during the second part of the bstm departmental seminar and workshop, wherein the..."
 author: "Goldenstate"
 date: "2024/10/18"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/462782535_859283756313510_7776647473377875841_n.jpg"
 ---
 
 Photos taken during the second part of the bstm departmental seminar and workshop, wherein the gsck – bstm students actively participated in the different engaging activities that showcased their intelligence, unity and competitive side.
 
 This is such a great way of wrapping up a successful event that surely made everyone laugh and enjoy this whole experience.
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/461949452_859283892980163_1073369624069225700_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/462125201_859283952980157_3950017513093363736_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/462145244_859283872980165_840350275452631928_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/462231119_859284036313482_6079061401601129696_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/462364596_859283992980153_6141714016051129641_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/462365286_859284192980133_813377030381895757_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/462455440_859284079646811_4639253738104869634_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/462782535_859283756313510_7776647473377875841_n.jpg)
+![](https://static.xx.fbcdn.net/images/emoji.php/v9/t6c/1/16/2764.png)
