--- a/news/2024/10/18/008.mdx
+++ b/news/2024/10/18/008.mdx
@@ -1,9 +1,10 @@
 ---
 slug: "mastering-the-art-of-tourism"
-title: "mastering the art of tourism"
+title: "Mastering the Art of Tourism"
 description: "The recently concluded bs tourism management seminar and workshop 2024 was an inspiring, morally-uplifting and..."
 author: "Goldenstate"
 date: "2024/10/18"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/461989448_859275002981052_1316858045970015222_n.jpg"
 ---
 
 The recently concluded bs tourism management seminar and workshop 2024 was an inspiring, morally-uplifting and informative event that aimed to equip the next generation of tourism professionals with innovative skills and knowledge.
@@ -15,3 +16,13 @@ This event was successfully organized by the third year bstm students as part of
 This seminar was led by ma’am jellybee baay-principe, lpt, mpa, as their guest speaker. she shared informative insights paired with innovative discussion that surely awakened the desires of the students to persevere and to explore the wide-ranged professional world of the tourism industry.
 
 Thank you, bstm students for attending and for activity participating.
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/461989448_859275002981052_1316858045970015222_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/462285646_859275586314327_7937899329130040866_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/462364468_859275896314296_6679504457005044880_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/462364511_859275849647634_1426127718743194129_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/462365253_859275639647655_3545982604070603183_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/462680625_859275712980981_4224806669015667189_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/462742240_859275772980975_4442622630201065686_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/10/462747939_859274346314451_5432129405113350298_n.jpg)
+![](https://static.xx.fbcdn.net/images/emoji.php/v9/t6c/1/16/2764.png)
