--- a/news/2015/03/24/001.mdx
+++ b/news/2015/03/24/001.mdx
@@ -1,9 +1,10 @@
 ---
 slug: "koronadal-makes-a-great-showing-at-the-2015-hrm-skills-competition"
-title: "koronadal makes a great showing at the 2015 hrm skills competition"
+title: "Koronadal Makes a Great Showing at the 2015 Hrm Skills Competition"
 description: "The annual hrm skills competition – sponsored by petron gasul – was a showcase of..."
 author: "Goldenstate"
 date: "2015/03/24"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/1-golden-kor-2015-04.jpg"
 ---
 
 The annual hrm skills competition – sponsored by petron gasul – was a showcase of the talent and creativity of goldenstate college’s hrm students at the kcc convention center on february 23 and 24. over those two days, students from both the general santos and koronadal campuses rolled, molded, folded, and arranged with great precision and finesse, proving their potential to be successful in the hotel and restaurant industries. after a keynote speech by tesda director mr. richard amparo, teams of students competed in a series of events – including table skirting, cake decorating, fruit and vegetable carving, and the ever-popular extreme flair-tending – presided over by a panel of culinary experts and in front of an audience of the manilay family, fellow students, and visitors from goldenstate’s partner high schools.
@@ -17,3 +18,7 @@ A student adds some finishing touches to his team’s entry for the fruit and ve
 With a delicate yet sure-handed touch, a student starts building the top layer of her team’s entry for the cake decorating event.
 
 One of the many exciting flair-tenders showing off his skills.
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/1-golden-kor-2015-05.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/1-golden-kor-2015-01.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/1-golden-kor-2015-03.jpg)
