--- a/news/2020/03/09/003.mdx
+++ b/news/2020/03/09/003.mdx
@@ -1,9 +1,10 @@
 ---
 slug: "criminology-students-of-goldenstate-college"
-title: "criminology students of goldenstate college"
+title: "Criminology Students of Goldenstate College"
 description: "Applause! to these criminology students of goldenstate college our future police officers bearing with courage,..."
 author: "Goldenstate"
 date: "2020/03/09"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2020/03/87765443_1546523535495187_7037223890665340928_n.jpg"
 ---
 
 Applause! to these criminology students of goldenstate college our future police officers bearing with courage, dedication and boldness. ‘kudos’ to them our activity area is peaceful and in order.
