--- a/news/2021/07/30/002.mdx
+++ b/news/2021/07/30/002.mdx
@@ -1,9 +1,12 @@
 ---
 slug: "watch-out-for-our-enrollment-caravan"
-title: "watch out for our enrollment caravan"
+title: "Watch Out for Our Enrollment Caravan"
 description: "Watch out for our enrollment caravan live 91.1 pacman radio- gensan on june 26, 2021..."
 author: "Goldenstate"
 date: "2021/07/30"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2021/07/199799023_338281221195857_7676919274647089796_n.jpg"
 ---
 
 Watch out for our enrollment caravan live 91.1 pacman radio- gensan on june 26, 2021 from 1:00-5:00pm.listen for our scholarship programs, courses offered, enrollment requirements of goldenstate college.
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2021/07/199799023_338281221195857_7676919274647089796_n.jpg)
