--- a/news/2022/11/23/007.mdx
+++ b/news/2022/11/23/007.mdx
@@ -1,9 +1,15 @@
 ---
 slug: "deped-alabel-christmas-for-a-cause"
-title: "deped alabel christmas for a cause"
+title: "Deped Alabel Christmas for a Cause"
 description: "Dr. warren a. manilay, goldenstate college president and deped sarangani sds gildo g. mosqueda during..."
 author: "Goldenstate"
 date: "2022/11/23"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/316557926_510923657746130_9096567856934790445_n.jpg"
 ---
 
 Dr. warren a. manilay, goldenstate college president and deped sarangani sds gildo g. mosqueda during the signing of deed of donation on november 21, 2022 at deped sarangani, alabel, sarangani province.goldenstate college through its christmas for a cause program donated 200 sacks of rice to supplement deped sarangani division feeding program where 5,000 school children will benefit for the month of november and december. this is in partnership with 1205 rnb arescom. jyt.
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/315641898_510923724412790_8254740832446725099_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/316045517_510923767746119_5953577288678682938_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/316538540_510923801079449_3330886047227952452_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2022/11/316557926_510923657746130_9096567856934790445_n.jpg)
