--- a/news/2023/08/19/001.mdx
+++ b/news/2023/08/19/001.mdx
@@ -1,11 +1,16 @@
 ---
 slug: "goldenstate-college-participates-parada-ng-lahi"
-title: "goldenstate college participates parada ng lahi"
+title: "Goldenstate College Participates Parada Ng Lahi"
 description: "In time with the celebration of kalilangan festival 2023, the goldenstate college general santos city..."
 author: "Jwill"
 date: "2023/08/19"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2023/08/332865503_706675907806631_8975902265206860552_n.jpg"
 ---
 
 In time with the celebration of kalilangan festival 2023, the goldenstate college general santos city participated in the parada ng lahi on february 27, 2023.
 
 The parade started at 5:30am from p. acharon boulevard to pioneer avenue which was participated by the different offices of the local government unit (lgu) of gen. santos city, non-government organizations (ngo) and the teachers from department of education – general santos city division.
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/08/332865503_706675907806631_8975902265206860552_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/08/333025842_3292129084450453_5185142206530748814_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/08/332858714_556280319804446_8305667365857786757_n.jpg)
