--- a/news/2023/08/19/003.mdx
+++ b/news/2023/08/19/003.mdx
@@ -1,11 +1,14 @@
 ---
 slug: "happy-to-be-with-our-guest-artist-wilbert-ross"
-title: "happy to be with our guest artist wilbert ross"
+title: "Happy to Be with Our Guest Artist Wilbert Ross"
 description: "Happy to be with our guest artist #wilbertross during our college week 2023. have a..."
 author: "Jwill"
 date: "2023/08/19"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2023/08/341629423_600036902152621_8146049622268997669_n.jpg"
 ---
 
 Happy to be with our guest artist #wilbertross during our college week 2023. have a memotable and enjoyable celebration goldenians.
 
 #collegeweek2023.
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/08/341629423_600036902152621_8146049622268997669_n.jpg)
