--- a/news/2023/08/19/008.mdx
+++ b/news/2023/08/19/008.mdx
@@ -1,11 +1,21 @@
 ---
 slug: "dr-sara-jane-t-manilay-vice-president-for-finance-received-an-award"
-title: "dr. sara jane t. manilay vice president for finance received an award"
+title: "Dr. Sara Jane T. Manilay Vice President for Finance Received an Award"
 description: "Just in dr. sara jane t. manilay vice president for finance, of goldenstate college."
 author: "Jwill"
 date: "2023/08/19"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2023/08/363357697_680141764157651_5441226074749318403_n.jpg"
 ---
 
 Just in dr. sara jane t. manilay vice president for finance, of goldenstate college.
 
 Received an award for her unending support to police regional office 12`s health and emergency assistance for rehabilitation and treatment (h.e.a.r.t) mutual fund program and scholarship grants for active and retired pnp dependents. during the command visit of our chief philippine national police pgen benjamin c. acorda, jr.
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/08/363357697_680141764157651_5441226074749318403_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/08/363361718_680141600824334_7541024721358596121_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/08/363374089_680140864157741_2955231928987746821_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/08/362650441_680140830824411_1580245344389597215_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/08/362302154_680140774157750_2608220998202992486_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/08/362254763_680141634157664_5590733576227908007_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/08/362243576_680141914157636_1577102910667058618_n.jpg)
+![](https://static.xx.fbcdn.net/images/emoji.php/v9/t77/1/16/203c.png)
