--- a/news/2023/11/26/001.mdx
+++ b/news/2023/11/26/001.mdx
@@ -1,9 +1,10 @@
 ---
 slug: "goldenstate-college-intramural-meet-2023-a-celebration-of-unity-talent-and-sportsmanship"
-title: "goldenstate college intramural meet 2023: a celebration of unity, talent, and sportsmanship"
+title: "Goldenstate College Intramural Meet 2023: A Celebration of Unity, Talent, and Sportsmanship"
 description: "In a dazzling showcase of athletic prowess and school spirit, goldenstate college general santos city..."
 author: "Goldenstate"
 date: "2023/11/26"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2023/11/399884161_315844591381459_6365129303532149159_n.jpg"
 ---
 
 In a dazzling showcase of athletic prowess and school spirit, goldenstate college general santos city campus hosted its much-anticipated intramural meet 2023. the event, held from november 13 to 17, brought together students, faculty, and staff in a week-long celebration of camaraderie and friendly competition.
@@ -17,3 +18,22 @@ The intramural meet not only celebrated physical prowess but also served as a pl
 As the week-long festivities unfolded, the campus buzzed with excitement, and the sense of school pride was palpable. the event successfully brought together the entire goldenstate college community, reinforcing the values of excellence, teamwork, and healthy competition.
 
 The intramural meet 2023 will undoubtedly be etched in the annals of goldenstate college’s history as a testament to the vibrant spirit of its students. congratulations to all participants for their unwavering dedication.
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/11/393890952_835196878406799_3722838626242370522_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/11/370232182_2238794796316473_6085821338716099941_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/11/405296742_907293004072474_8484767974320909512_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/11/386818656_788493419702848_2982057724803683344_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/11/400207025_1658170184708892_1782238773000362031_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/11/400241798_1515153672654167_190499451378992683_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/11/370130481_877028367349413_892916910372399152_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/11/369846160_3257191521246447_3081751758718978151_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/11/385551356_685404457027775_3494217734167170401_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/11/370093199_1306397316542020_2906168931290930820_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/11/370063940_717571386953484_8653681819080977419_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/11/400252884_253789437390868_2825737364025589659_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/11/385541796_2289410344583412_8198968075233140849_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/11/399168141_269703422263827_6918539813298965127_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/11/370169618_658209172967231_4579311204609562260_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/11/399887840_235946052702332_2231658982794677956_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/11/399898180_370727492075674_4687829304375492484_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2023/11/399884161_315844591381459_6365129303532149159_n.jpg)
