--- a/news/2024/01/23/002.mdx
+++ b/news/2024/01/23/002.mdx
@@ -1,9 +1,24 @@
 ---
 slug: "golden-cares-spreads-joy-for-2nd-consecutive-year-a-heartwarming-christmas-gift-giving-event-for-cancer-survivors"
-title: "golden cares spreads joy for 2nd consecutive year: a heartwarming christmas gift giving event for cancer survivors"
+title: "Golden Cares Spreads Joy for 2nd Consecutive Year: A Heartwarming Christmas Gift Giving Event for Cancer Survivors"
 description: "In a celebration that blended the spirit of giving during birthday celebration of dr. sara..."
 author: "Goldenstate"
 date: "2024/01/23"
+thumbnail: "https://www.goldenstate.edu.ph/wp-content/uploads/2024/01/419726884_932715264885636_8805908304352171374_n.jpg"
 ---
 
 In a celebration that blended the spirit of giving during birthday celebration of dr. sara jane t. manilay, golden cares, spearheaded by dr. john ralph t. manilay and dr. warren a. manilay, commemorated its second year of christmas gift giving for cancer survivors. this touching event, held in collaboration with the mindanao cancer society, goldenstate college and goldenstate little college unfolded on december 14, 2023, at goldenstate college lagao campus with sponsorships from jollibee foods corporation and kcc malls.
+
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/01/419582882_1696413337549595_8054021088937185475_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/01/419657309_1112030556644321_1081889997954411236_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/01/419660425_910916887314804_8249342209300223799_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/01/419717216_389610343582636_1910195590557490633_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/01/419719854_1362085067761997_3646370553077001296_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/01/419726882_762561842445021_6853177425219426899_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/01/419726884_932715264885636_8805908304352171374_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/01/419739632_1884631891996932_3060163226923362967_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/01/419828098_1435826284003931_2258424834899437422_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/01/419923036_235198106214099_8822390063680143114_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/01/419924621_330657826465399_1812956279455676794_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/01/419980281_398327416005461_1461207456741051236_n.jpg)
+![](https://www.goldenstate.edu.ph/wp-content/uploads/2024/01/420002583_733252785427321_5300702906958862274_n.jpg)
